--- a/package.json
+++ b/package.json
@@ -66,11 +66,14 @@
     "packaging": "jar"
   },
   "dependencies": {
+    "@angular/animations": "12.0.5",
+    "@angular/cdk": "^12.1.1",
     "@angular/common": "12.0.5",
     "@angular/compiler": "12.0.5",
     "@angular/core": "12.0.5",
     "@angular/forms": "12.0.5",
     "@angular/localize": "12.0.5",
+    "@angular/material": "^12.1.1",
     "@angular/platform-browser": "12.0.5",
     "@angular/platform-browser-dynamic": "12.0.5",
     "@angular/router": "12.0.5",
@@ -78,7 +81,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.35",
     "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@ng-bootstrap/ng-bootstrap": "9.1.3",
-    "bootstrap": "4.6.0",
+    "bootstrap": "^4.6.0",
     "bootswatch": "4.6.0",
     "dayjs": "1.10.5",
     "ngx-infinite-scroll": "10.0.1",
